// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStep is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStep testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStep__circle"
    >
      1
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props headingElement 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStep__circle"
    >
      1
    </div>
    <h3
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </h3>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status complete is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStepNumber--complete euiStep__circle"
    >
      <svg
        aria-label="complete"
        class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status danger is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStepNumber--danger euiStep__circle"
    >
      <svg
        aria-label="has errors"
        class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status disabled is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStepNumber--disabled euiStep__circle"
    >
      1
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status incomplete is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Incomplete Step 1"
      class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
    />
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status warning is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 1"
      class="euiStepNumber euiStepNumber--warning euiStep__circle"
    >
      <svg
        aria-label="has warnings"
        class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props step 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      aria-label="Step 5"
      class="euiStepNumber euiStep__circle"
    >
      5
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;
